finished first tutorial

--- a/app/views/messages/_form.html.erb
+++ b/app/views/messages/_form.html.erb
@@ -11,22 +11,9 @@
     </div>
   <% end %>
 
-  <div class="field">
-    <%= form.label :content %>
-    <%= form.text_area :content %>
-  </div>
-
-  <div class="field">
-    <%= form.label :user_id %>
-    <%= form.text_field :user_id %>
-  </div>
-
-  <div class="field">
-    <%= form.label :room_id %>
-    <%= form.text_field :room_id %>
-  </div>
-
-  <div class="actions">
-    <%= form.submit %>
-  </div>
+   <%= form.hidden_field :room_id, value: room.id %>
+   <div class="input-group">
+    <%= form.text_field :content, placeholder: "Type your message here...", class: 'form-control' %>
+    <%= form.submit "Add Messages", class: 'btn btn-primary mx-2'  %>
+</div>
 <% end %>
