--- a/app/javascript/stylesheets/application.scss
+++ b/app/javascript/stylesheets/application.scss
@@ -1,4 +1,99 @@
+body {
+     ::-webkit-scrollbar {
+        display: none;
+    }
+    -ms-overflow-style: none;
+}
+
 .chat-room {
     height: 100vh;
-    overflow-y: hidden;
+    overflow-y: scroll;
+    #messages {
+        padding-bottom: 120px;
+    }
+    .navbar {
+        border-bottom: 1px solid #eeeeee;
+        margin-left: -15px;
+    }
+    .message {
+        min-height: 59px;
+        .content-container {
+            display: inline-block;
+            .content {
+                background-color: #eeeeee;
+                padding: 8px 16px;
+                border-radius: 20px;
+            }
+            .author {
+                font-size: 8px;
+                color: #777777;
+                margin-left: 10px;
+            }
+        }
+        &.me {
+            .content-container {
+                float: right;
+                .content {
+                    background-color: #007bff;
+                    color: white;
+                }
+            }
+        }
+    }
+    .chat-box {
+        position: fixed;
+        width: 70%;
+        margin-left: -15px;
+        bottom: 0;
+        padding: 20px;
+        background-color: white;
+        border-top: 1px solid #eeeeee;
+        input[type=text] {
+            font-size: 18px;
+            padding: 8px;
+        }
+        .btn {
+            font-size: 18px;
+            padding: 8px;
+        }
+    }
+}
+
+.form-inline {
+    display: inline;
+}
+
+.room-link {
+    text-decoration: none !important;
+    &:hover {
+        text-decoration: none;
+    }
+    .room-card {
+        border-radius: 20px;
+        transition: background-color 0.5s ease;
+        &:hover {
+            background-color: #eeeeee;
+        }
+        &.active {
+            background-color: black;
+            .name {
+                color: white;
+            }
+            .member-count {
+                color: #e0e0e0;
+            }
+        }
+        .name {
+            font-weight: bold;
+            color: black;
+        }
+        member-count {
+            color: #777777;
+            font-weight: light;
+        }
+    }
+}
+
+.room-sidebar {
+    border-right: 1px solid #eeeeee;
 }
