--- a/app/views/rooms/index.html.erb
+++ b/app/views/rooms/index.html.erb
@@ -1,8 +1,10 @@
 <p id="notice"><%= notice %></p>  
-
+<div id="room-id" data-room-id="<%=@room.try(:id)%>"></div>
+<div id="user-id" data-user-id="<%=current_user.id%>"></div>
 <div class = "container-fluid">
   <div class="row">
-    <div class='col-3'>
+    <div class='col-3 room-sidebar'>
+
       <div class="card">
         <div class="card-body">
           <%= render 'form', room: Room.new %>
@@ -11,11 +13,14 @@
       <div class="card">
         <div class="card-body">
           <% @rooms.each do |room|%>
-            
-            <%= link_to room do%>
-                <div class="card mb-2">
+            <%= link_to room, class: 'room-link' do%>
+              <% active_class = (@room == room)? 'active' : ''%>
+                <div class="card mb-2 room-card <%= active_class %>">
                   <div class="card-body">
-                  <%= room.name %>
+                  <span class="name"><%= room.name %></span><br>
+                  <span class="member-count">
+                    <small><%= room.users.uniq.count%> members </small>
+                  </span>
                   </div>
                 </div>
             <% end%>
@@ -23,16 +28,29 @@
           </div>
         </div>
 
-
-
-
     </div>
     <div class='col-9'>
       <%if @room.present?%>
+
+          <nav class="navbar navbar-light bg-light mb-4">
+            <div class="container-fluid">
+              <span class="navbar-brand" > <%= @room.name%></span>
+              <ul class='navbar-nav'>
+                  <li class='nav-item'>
+                        Hello,        <%= current_user.username %>
+                  </li>
+              </ul>
+            </div>
+          </nav>
+
         <div class="chat-room">
-              <p> <%= @room.name%></p>
+        <div id="messages">
+              <% @room.messages.each do |message|%>
+                    <%= render 'messages/message', message: message%>
+              <%end%>
+              </div>
               <div class="chat-box">
-                <%= render 'messages/form' , message: Message.new%>
+                <%= render 'messages/form' , message: Message.new, room: @room%>
           </div>
         <div>
       <%end%>
