--- a/app/views/messages/_form.html.erb
+++ b/app/views/messages/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_with(model: message, local: true) do |form| %>
+<%= form_for(message, remote: true) do |form| %>
   <% if message.errors.any? %>
     <div id="error_explanation">
       <h2><%= pluralize(message.errors.count, "error") %> prohibited this message from being saved:</h2>
@@ -14,6 +14,6 @@
    <%= form.hidden_field :room_id, value: room.id %>
    <div class="input-group">
     <%= form.text_field :content, placeholder: "Type your message here...", class: 'form-control' %>
-    <%= form.submit "Add Messages", class: 'btn btn-primary mx-2'  %>
+    <%= form.submit "Add Messages", class: 'btn btn-primary mx-2', id: 'chat-btn'  %>
 </div>
 <% end %>
